--- a/src/main/resources/templates/2SecondPageForm.html
+++ b/src/main/resources/templates/2SecondPageForm.html
@@ -54,7 +54,7 @@
 </div>
 <div style="text-align:center">
     <button type="button" class="btn btn-primary btn-lg"
-            th:inclick="|location.href='@{/location}'|">
+            th:onclick="|location.href='@{/location}'|">
         추천 받기!
     </button>
 </div>
