--- a/src/main/resources/templates/1FirstPageForm.html
+++ b/src/main/resources/templates/1FirstPageForm.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+
 <head>
     <meta charset="UTF-8">
     <link th:href="@{/css/bootstrap.min.css}"
           href="../css/bootstrap.min.css" rel="stylesheet">
-    <title>오점머 추천 페이지 3</title>
-    <style>
-        .my-4{
-            background-image: url('https://pin.it/5WbqG8P');
-            background-position: center;
-            background-size: cover;
-            text-align: center;
-        }
-    </style>
+    <title>오점머 추천 페이지 1</title>
+
 </head>
 <body>
 <div class="container" style="max-width:600px"></div>
@@ -21,16 +15,15 @@
     <div style="text-align:center">오늘의 점심 메뉴</div>
 </h1>
 <h3>
-    <div style="text-align:center">현재 위치를 확인해 주세요</div>
+    <div style="text-align:center">오늘 뭐 먹지?</div>
 </h3>
 
 <hr class="my-4">
 <div style="text-align:center">
     <button type="button" class="btn btn-primary btn-lg"
-            th:inclick="|location.href='@{/list}'|">
-        위치 선택 완료!
+            th:onclick="|location.href='@{/checkCategory}'|">
+        추천 받기!
     </button>
-
 </div>
 </body>
 </html>
