--- a/src/main/resources/templates/fragments/page-form-1.html
+++ b/src/main/resources/templates/fragments/page-form-1.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="">
+<head>
+    <meta charset="utf-8">
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="../css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .container {
+            max-width: 560px;
+            text-align: center;
+        }
+    </style>
+</head>
 <body>
 <div th:fragment="block">
-    <div>
-        <div>
-            <button type="button" class="button swiper-button-next-custom">
-                추천 시작!
-            </button>
+    <div class="container">
+        <div class="py-5 text-center">
+            <h2>오늘의 점심 메뉴</h2></div>
+        <h4 class="mb-3">오늘은 뭐 먹지?</h4>
+        <hr class="my-4">
+        <div class="row">
+            <div class="col">
+                <button class="w-100 btn btn-primary btn-lg" type="submit">
+                    추천받기!
+                </button>
+            </div>
         </div>
-    </div>
+    </div> <!-- /container -->
 </div>
 </body>
 </html>
