--- a/src/main/resources/templates/fragments/page-form-3.html
+++ b/src/main/resources/templates/fragments/page-form-3.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="utf-8">
+    <link th:href="@{/css/bootstrap.min.css}"
+          href="../css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .container {
+            max-width: 560px;
+            text-align: center;
+        }
+    </style>
+</head>
 <body>
 <div th:fragment="block">
-    <div>
-        <div>
-            <h5>현재 위치를 확인해 주세요</h5>
+    <div class="container">
+        <div class="py-5 text-center">
+            <h2>오늘의 점심 메뉴</h2></div>
+        <h4 class="mb-3">현재 위치를 확인해 주세요</h4>
+        <hr class="my-4">
+        <div class="row">
+            <div class="col">
+                <button class="w-100 btn btn-primary btn-lg" type="submit">
+                    위치 선택 완료
+                </button>
+            </div>
         </div>
-        <div>
-            <button type="button" class="button">추천 받기!</button>
-        </div>
-    </div>
+    </div> <!-- /container -->
 </div>
-
 </body>
 </html>
