--- a/src/main/resources/templates/fragments/page-form-2.html
+++ b/src/main/resources/templates/fragments/page-form-2.html
@@ -2,15 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
     <style>
-        .container {
-            text-align: center;
-        }
-
         .form-check {
-            margin-bottom: 0.5rem;
             font-size: 1.25rem;
             text-align: center;
         }
@@ -18,46 +12,60 @@
 </head>
 <body>
 <div th:fragment="block">
-    <div class="container">
-        <h2>오늘의 점심 메뉴</h2>
-        <h4>오늘은 뭐 먹지?</h4>
-        <div class="form-check">
-            <input type="checkbox" value="" id="Korean" checked>
-            <label for="Korean">
-                한식
-            </label>
-        </div>
-        <div class="form-check">
-            <input type="checkbox" value="" id="Japanese" checked>
-            <label for="Japanese">
-                일식
-            </label>
-        </div>
-        <div class="form-check">
-            <input type="checkbox" value="" id="Chinese" checked>
-            <label for="Chinese">
-                중식
-            </label>
-        </div>
-        <div class="form-check">
-            <input type="checkbox" value="" id="Western" checked>
-            <label for="Western">
-                양식
-            </label>
-        </div>
-        <div class="form-check">
-            <input type="checkbox" value="" id="All" onclick="selectAllCategory()">
-            <label for="All">
-                전체 선택하기
-            </label>
-        </div>
-
-        <button type="submit">
-            추천받기!
-        </button>
+    <div class="form-check">
+        <h2>메뉴 선택하기</h2>
     </div>
+    <div class="form-check">
+        <input type="checkbox" value="" id="All" onclick="selectAllCategory()">
+        <label for="All">
+            전체 선택
+        </label>
+    </div>
+    <br>
+    <div class="form-check">
+        <input type="checkbox" value="" id="Korean" checked>
+        <label for="Korean">
+            한식
+        </label>
+    </div>
+    <br>
+    <div class="form-check">
+        <input type="checkbox" value="" id="Japanese">
+        <label for="Japanese">
+            일식
+        </label>
+    </div>
+    <br>
+    <div class="form-check">
+        <input type="checkbox" value="" id="Chinese">
+        <label for="Chinese">
+            중식
+        </label>
+    </div>
+    <br>
+    <div class="form-check">
+        <input type="checkbox" value="" id="Western">
+        <label for="Western">
+            양식
+        </label>
+    </div>
+    <br>
+
+
+    <button onclick="showPageForm(3)">
+        현재 위치 선택하러 가기
+    </button>
 </div>
 
 
+<script>
+    function showPageForm(pageNumber) {
+        if (pageNumber === 3) {
+            document.getElementById('pageForm1').style.display = 'none';
+            document.getElementById('pageForm2').style.display = 'none';
+            document.getElementById('pageForm3').style.display = 'block';
+        }
+    }
+</script>
 </body>
 </html>
