--- a/src/main/resources/templates/fragments/page-form-3.html
+++ b/src/main/resources/templates/fragments/page-form-3.html
@@ -25,7 +25,7 @@
     <div class="row">
         <div class="col">
             <button class="w-100 btn btn-primary btn-lg" type="submit" onclick="recommend()">
-                위치 선택 완료
+                위치 확인하기
             </button>
         </div>
     </div>
