--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -17,20 +17,17 @@
         <ol class="list-group list-group-numbered">
             <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-2 me-auto">
-                    <div class="fw-bold">KOREAN</div>
-                    뱅뱅막국수
-                    들기름 막국수
+                    <div class="fw-bold">recommendeMenu</div>
+                    title
+                    link
+                    category
+                    description
+                    telephone
+                    address
+                    roadAddress
                 </div>
                 <span class="badge bg-primary rounded-pill">사진</span>
             </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold">Korean</div>
-                    뱅뱅막국수
-                    들기름 막국수
-                </div>
-                <span class="badge bg-primary rounded-pill">사진</span>
-        </ol>
         <div style="text-align:center">
             <button type="button" class="btn btn-primary btn-lg">다시 추천 받기!</button>
         </div>
