--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -18,12 +18,12 @@
             <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-2 me-auto">
                     <div class="fw-bold">recommendeMenu</div>
-                    title
+                    title 음식점 이름
                     link
-                    category
-                    description
-                    telephone
-                    address
+                    category 카테고리(한식,양식)
+                    description 설명
+                    telephone 전화번호
+                    address 주소
                     roadAddress
                 </div>
                 <span class="badge bg-primary rounded-pill">사진</span>
