--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -18,15 +18,12 @@
         <li class="list-group-item d-flex justify-content-between align-items-start">
             <div class="ms-2 me-auto">
                 <div class="fw-bold">recommendeMenu</div>
-                TRDSTATENM; //영업상태명 (폐업, 영업)
-                SITEWHLADDR;  //지번주소
-                RDNWHLADDR;   //도로명 주소
-                BPLCNM;  //사업장명
-                UPTAENM;  //업태구분명
-                X; //좌표정보(X) 경도
-                Y; //좌표정보(Y) 위도
+                DTLSTATENM : 영업 //상세영업상태명 (폐업, 영업)
+                SITEWHLADDR : 서울특별시 중구 을지로6가 18-137 //지번주소
+                RDNWHLADDR : 서울특별시 중구 장충단로 249-10, 2층 (을지로6가) //도로명 주소
+                BPLCNM : 매취랑 동대문점 //사업장명
+                UPTAENM : 한식  //업태구분명
             </div>
-            <span class="badge bg-primary rounded-pill">사진</span>
         </li>
         <div style="text-align:center">
             <button type="button" class="btn btn-primary btn-lg">다시 추천 받기!</button>
