--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -18,11 +18,11 @@
         <li class="list-group-item d-flex justify-content-between align-items-start">
             <div class="ms-2 me-auto">
                 <div class="fw-bold">recommendeMenu</div>
-                DTLSTATENM : 영업 //상세영업상태명 (폐업, 영업)
-                SITEWHLADDR : 서울특별시 중구 을지로6가 18-137 //지번주소
-                RDNWHLADDR : 서울특별시 중구 장충단로 249-10, 2층 (을지로6가) //도로명 주소
-                BPLCNM : 매취랑 동대문점 //사업장명
-                UPTAENM : 한식  //업태구분명
+                dtlStateNm : 영업 //상세영업상태명 (폐업, 영업)
+                siteWhLaDdr : 서울특별시 중구 을지로6가 18-137 //지번주소
+                rdNWhLaDdr : 서울특별시 중구 장충단로 249-10, 2층 (을지로6가) //도로명 주소
+                bpLcNm : 매취랑 동대문점 //사업장명
+                upTadNm : 한식  //업태구분명
             </div>
         </li>
         <div style="text-align:center">
