결과페이지 수정

--- a/src/main/resources/templates/noresult.html
+++ b/src/main/resources/templates/noresult.html
@@ -23,7 +23,7 @@
         카데고리를 재선택하거나, 다른 곳으로 이동해주세요.
     </div>
         <div style="text-align:center">
-            <button type="button" class="btn btn-primary btn-lg">다시 추천 받기!</button>
+            <button id="reloadButton" type="button" class="btn btn-primary btn-lg">다시 추천 받기!</button>
         </div>
 </div>
 <script>
