--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -29,7 +29,7 @@
         </li>
     </ol>
         <div style="text-align:center">
-            <button type="button" class="btn btn-primary btn-lg">다시 추천 받기!</button>
+            <button id="reloadButton" type="button" class="btn btn-primary btn-lg">다시 추천 받기!</button>
         </div>
 </div>
 
