js를 이용해서 화면 전환

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -59,6 +59,7 @@
                         });
                     } else {
                         alertMessage.show();
+                        listElement.empty(); // 결과가 없는 경우 리스트 비우기
                     }
                 },
                 error: function(error) {
