--- a/src/main/resources/templates/fragments/page-form-3.html
+++ b/src/main/resources/templates/fragments/page-form-3.html
@@ -24,12 +24,18 @@
     <hr class="my-2">
     <div class="row">
         <div class="col">
-            <button class="w-100 btn btn-primary btn-lg" type="submit" onclick="recommend()">
+            <button class="w-100 btn btn-primary btn-lg" type="submit" onclick="showRecommend()">
                 위치 확인하고 추천 받기
             </button>
         </div>
     </div>
 
 </div>
+<script>
+    function showRecommend() {
+        recommend(); // recommend 함수 호출
+        window.location.href = "recommend.html";
+    }
+</script>
 </body>
 </html>
