버튼 크기 수정
버튼의 크기가 너무 작아 크기를 수정했다.
html과 css파일을 수정했다.
html에는 class이름을 지정하고 css 파일에 실제 크기 및 디자인 부분을 작성했다.

--- a/src/main/resources/templates/fragments/page-form-1.html
+++ b/src/main/resources/templates/fragments/page-form-1.html
@@ -30,7 +30,7 @@
             <h2>오늘의 점심 메뉴</h2>
         </div>
     </div>
-    <button onclick="showPageForm(2)" class="btn"> <!-- 여백을 추가하기 위해 클래스를 지정합니다. -->
+    <button onclick="showPageForm(2)" class="btn">
         메뉴 선택하러가기
     </button>
 </div>
