버튼 크기 수정
버튼의 크기가 너무 작아 크기를 수정했다.
html과 css파일을 수정했다.
html에는 class이름을 지정하고 css 파일에 실제 크기 및 디자인 부분을 작성했다.

--- a/src/main/resources/templates/fragments/page-form-2.html
+++ b/src/main/resources/templates/fragments/page-form-2.html
@@ -52,7 +52,7 @@
     <br>
 
 
-    <button onclick="showPageForm(3)" class="btn">
+    <button onclick="showPageForm(3)" >
         현재 위치 선택하러 가기
     </button>
 </div>
