--- a/src/main/resources/templates/fragments/page-form-3.html
+++ b/src/main/resources/templates/fragments/page-form-3.html
@@ -33,8 +33,8 @@
 </div>
 <script>
     function showRecommend() {
-        recommend(); // recommend 함수 호출
-        window.location.href = "recommend.html";
+        recommend();
+        window.location.href = "result.html";
     }
 </script>
 </body>
