--- a/src/main/resources/templates/fragments/page-form-3.html
+++ b/src/main/resources/templates/fragments/page-form-3.html
@@ -19,22 +19,34 @@
 <body>
 <div th:fragment="block">
     <div class="container">
-        <h4 class="mb-3">현재 위치를 확인해 주세요</h4><br>
+
     </div> <!-- /container -->
     <hr class="my-2">
     <div class="row">
         <div class="col">
             <button class="w-100 btn btn-primary btn-lg" type="submit" onclick="showRecommend()">
-                위치 확인하고 추천 받기
+                위치 확인하기
             </button>
+            <p id="location"></p> <!-- 위치 정보를 표시할 요소 추가 -->
         </div>
     </div>
+
+    <div id="map" style="width:100%;height:350px;"></div>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cf620856f46d903f5b7f04166e0f9ea3"></script>
 
 </div>
 <script>
     function showRecommend() {
-        recommend();
-        window.location.href = "result.html";
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(function(position) {
+                var latitude = position.coords.latitude;
+                var longitude = position.coords.longitude;
+                document.getElementById("location").innerHTML = "위도: " + latitude + "<br>경도: " + longitude;
+
+            });
+        } else {
+            alert("이 브라우저는 Geolocation을 지원하지 않습니다.");
+        }
     }
 </script>
 </body>
