--- a/src/main/resources/templates/fragments/page-form-3.html
+++ b/src/main/resources/templates/fragments/page-form-3.html
@@ -41,8 +41,27 @@
             navigator.geolocation.getCurrentPosition(function(position) {
                 var latitude = position.coords.latitude;
                 var longitude = position.coords.longitude;
+
                 document.getElementById("location").innerHTML = "위도: " + latitude + "<br>경도: " + longitude;
 
+                var mapContainer = document.getElementById('map');
+                var mapOption = {
+                    center: new kakao.maps.LatLng(latitude, longitude), // 현재 위치를 중심으로 지도 표시
+                    level: 3
+                };
+
+                var map = new kakao.maps.Map(mapContainer, mapOption); // 지도 생성
+
+                // 마커가 표시될 위치입니다
+                var markerPosition = new kakao.maps.LatLng(latitude, longitude);
+
+                // 마커를 생성합니다
+                var marker = new kakao.maps.Marker({
+                    position: markerPosition
+                });
+
+                // 마커가 지도 위에 표시되도록 설정합니다
+                marker.setMap(map);
             });
         } else {
             alert("이 브라우저는 Geolocation을 지원하지 않습니다.");
