--- a/src/main/resources/templates/page3.html
+++ b/src/main/resources/templates/page3.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/styles.css}" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
     <style>
         .container {
             max-width: 560px;
