page들 정렬, css 일부 수정

--- a/src/main/resources/templates/page1.html
+++ b/src/main/resources/templates/page1.html
@@ -8,6 +8,7 @@
         .container {
             max-width: 560px;
             text-align: center;
+            margin: 20px auto; /* 가운데 정렬 */
         }
 
         /* 각 요소를 블록 요소로 설정하여 줄바꿈을 적용합니다. */
@@ -16,7 +17,18 @@
             margin-bottom: 20px; /* 간격 조절 */
           //  font-family: "BM Jua", sans-serif; /* 폰트 적용 실패!*/
         }
-
+        .btn {
+            display: block;
+            margin: 20px auto; /* 가운데 정렬 */
+            font-size: 1.0em;
+            padding: 8px 16px;
+            border-radius: 8px;
+            background-color: #007BFF;
+            color: #FFFFFF;
+            text-align: center;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
     </style>
 </head>
 <body>
