--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -9,6 +9,19 @@
             font-size: 1.25rem;
             text-align: center;
         }
+
+        .btn {
+            display: block;
+            margin: 20px auto; /* 가운데 정렬 */
+            font-size: 1.0em;
+            padding: 8px 16px;
+            border-radius: 8px;
+            background-color: #007BFF;
+            color: #FFFFFF;
+            text-align: center;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
     </style>
 </head>
 <body>
