--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
   <meta charset="utf-8">
   <title>OJM 현재 위치 확인하기</title>
@@ -14,7 +14,6 @@
 </div>
 
 <div id="map" style="width:100%;height:350px;"></div>
-
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=cf620856f46d903f5b7f04166e0f9ea3"></script>
 <script>
   function showLocation() {
