--- a/src/main/resources/templates/page1.html
+++ b/src/main/resources/templates/page1.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
     <link th:href="@{/css/styles.css}" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
+    <script th:src="@{/js/script.js}"></script>
     <style>
         .container {
             max-width: 560px;
@@ -15,7 +16,7 @@
         h4, .btn {
             display: block;
             margin-bottom: 20px; /* 간격 조절 */
-          //  font-family: "BM Jua", sans-serif; /* 폰트 적용 실패!*/
+        //  font-family: "BM Jua", sans-serif; /* 폰트 적용 실패!*/
         }
         .btn {
             display: block;
