--- a/src/main/resources/templates/page2.html
+++ b/src/main/resources/templates/page2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
+    <script th:src="@{/js/script.js}"></script>
     <link th:href="@{/css/styles.css}" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
     <style>
         .form-check {
@@ -72,6 +73,25 @@
 </div>
 
 <script>
+    function sendCategorySelection() {
+        const categories = ['Korean', 'Japanese', 'Chinese', 'Western'];
+        let selectedCategories = categories.filter(category => document.getElementById(category).checked).map(category => category === 'Korean' ? '한식' : category === 'Japanese' ? '일식' : category === 'Chinese' ? '중식' : '양식');
+
+        fetch('/v1/ojm/category', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ categoryList: selectedCategories }),
+        })
+        .then(response => response.json())
+        .then(data => console.log('Success:', data))
+        .catch((error) => {
+            console.error('Error:', error);
+        });
+    }
+
+    document.querySelector('.btn').addEventListener('click', sendCategorySelection);
 
 </script>
 </body>
