--- a/src/main/resources/templates/page1.html
+++ b/src/main/resources/templates/page1.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}" href="../css/bootstrap.min.css" rel="stylesheet">
     <link th:href="@{/css/styles.css}" rel="stylesheet"> <!-- CSS 파일 참조 추가 -->
+    <script th:src="@{/js/script.js}"></script>
     <style>
         .container {
             max-width: 560px;
